--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Saksham Madan</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->'
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+
+
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="ionicons/css/ionicons.min.css" rel="stylesheet">
@@ -759,14 +765,22 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2>SAARTHI<br /> Platform for education of visually impaired.[Winner at hackUMBC 2020, First Prize under Education Track Advanced] </h2>
                         <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>We implemented a web portal for the people to facilitate them in education by providing them the tools which will help them learn. We have used HTML, CSS ,Javascript and Django for building the website and their features . Along with them we used Python for building up the Optical Character Recognition which has been used to make the Revoice Feature.</p>
+                        <p>We tried to implement multiple features like Speech to Text, Text to Speech, Optical Character recognition that is Revoice, Voice Controlled. In Future Developments, We can try implementing a chat to help them with their queries. We would like to improve upon the feasibility of the voice control feature and accuracy of the optical character recognition.</p>
                         <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
+                        <br /> <img src="img/portfolio/saarthi-vision.PNG" alt="" class="img-responsive" />
                         <br />
                         <br />
-                        <p>Appropriately maintain  compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p><strong>What is the Potential? How useful or efficient can it be to people?</strong><br>
+                            This can be used to many people not just specific to the Visually impaired but hearing impaired as well. This would come to a great use during this pandemic but even later it can be used by people who are physically challenged and cannot move to different places to receive their education.</p>
+                        <a href="http://saarthi.pythonanywhere.com/">Our Portal</a>
+                        <br />
+                        <br />
+                        <p>Click the Github icon to view the source code</p>
+                        <ul class="social">
+                            <li><a href="https://github.com/Hawk453/Hackumbc"><i class="ion-social-github"></i></a></li>
+                        </ul>
+                        <br />
                         <br />
                         <br />
                     </div>
