--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Saksham Madan</title>
     <!-- <link rel="icon" href="img/favicon.ico" type="image/x-icon"> -->'
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <!-- <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="manifest" href="favicon_io/site.webmanifest"> -->
+    <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
 
     <!-- Bootstrap -->
