Completed Projects section

--- a/index.html
+++ b/index.html
@@ -801,14 +801,26 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2>Prediction of missing values<br /> Using Linear regression missing data is predicted.</h2>
                         <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>The dataset contains missing values, we are trying to predict those values. After the processing we are able to generate a data set with the predicted values.</p>
+                        <p>For data scientists, handling missing data is an important part of the data cleaning and model development process. Often times, real data contains multiple sparse fields or fields that are laden with bad values. In this program, we have built models that can be used to impute missing or bad values in data.</p>
+                        <p>When the data set is analysed we face with a problem of missing data in ageEstimate and redundant data in various labels which may impact our processing of the data. Pre-processing is done to sort out the data by removing the redundant data and performing encoding on the categorical data to establish a metrics from where we can decide on a filter which we can use it to predict the missing data.</p>
+                        <p>After the data is processed we correlate the data against each other to find similarity.</p>
+                        <p>First let’s consider building a model that imputes missing ‘ageEstimate’ values using the ‘status’. To start, let’s correlate between ‘ageEstimate’ and ‘status’. We see that there is a weak correlation. Let’s build a linear regression model that uses ‘status’ to predict the ‘ageEstimate’. First, let’s import the ‘Linear Regression’ module from ‘scikit-learn’. Now let’s evaluate the performance of our model. Let’s use mean squared error to evaluate the performance of our model.</p>
+                        <p>For comparison purposes we use various other models like Random Forests Regression, but in this scenario we had best possible predictions with Linear Regression.</p>
                         <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
+                        <br /> <img src="img/portfolio/prediction_model.png" alt="" class="img-responsive" />
                         <br />
                         <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p><strong>The process goes thus:</strong><br>
+                            Call the variable where you have missing values as y.
+                            Split data into sets with missing values and without missing values, name the missing set X_text and the one without missing values X_train and take y (variable or feature where there is missing values) off the second set, naming it y_train.
+                            Use one of classification methods to predict y_pred.
+                            Add it to X_test as your y_test column. Then combine sets together.</p>
+                        <p>Further improvements can be done on this like hyperparameter tuning, and using a deep learning based network model which is explicitly designed for this.</p>
+                        <p>Click the Github icon to view the source code</p>
+                        <ul class="social">
+                            <li><a href="https://github.com/Hawk453/predicting-missing-data-using-linear-regression"><i class="ion-social-github"></i></a></li>
+                        </ul>
                         <br />
                         <br />
                     </div>
@@ -828,14 +840,12 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2>This Project is Under development<br /> Stay tuned, it will be done soon!</h2>
                         <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non tortor vel velit congue tincidunt non quis nisl. Cras quis ipsum quis massa mollis convallis. In quis dui vitae tortor egestas lacinia.</p>
                         <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
+                        <br /> <img src="img/portfolio/Coming soon!.png" alt="" class="img-responsive" />
                         <br />
                         <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non tortor vel velit congue tincidunt non quis nisl. Cras quis ipsum quis massa mollis convallis. In quis dui vitae tortor egestas lacinia.</p>
                         <br />
                         <br />
                     </div>
@@ -855,14 +865,12 @@
                     <div class="col-md-8 col-md-offset-2">
                         <h2>This Project is Under development<br /> Stay tuned, it will be done soon!</h2>
                         <div class="h-50"></div>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non tortor vel velit congue tincidunt non quis nisl. Cras quis ipsum quis massa mollis convallis. In quis dui vitae tortor egestas lacinia.</p>
                         <br />
-                        <br /> <img src="img/portfolio/02.jpg" alt="" class="img-responsive" />
+                        <br /> <img src="img/portfolio/Coming soon!.png" alt="" class="img-responsive" />
                         <br />
                         <br />
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium strategic theme areas vis-a-vis.</p>
-                        <p>Appropriately maintain standards compliant total linkage with cutting-edge action items. Enthusiastically create seamless synergy rather than excellent value.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce non tortor vel velit congue tincidunt non quis nisl. Cras quis ipsum quis massa mollis convallis. In quis dui vitae tortor egestas lacinia.</p>
                         <br />
                         <br />
                     </div>
