--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <p>I am appropriately maintaining standards compliant towards total linkage with cutting-edge technology. Enthusiastically creating seamless synergy rather than excellent value.</p>
                 <p>Passionate developer, inquisitive, fast learner with experience in core technology and a specialist in Artificial Intelligence and Data Science. Well equipped with advanced level python, C++ and Java. Experience in creating end to
                     end pipelines for data science projects.</p>
-                <p> Currently the Vice Chair at MFC-VIT, with work experince at The Sparks Foundation and Tutedude. Building new projects which provide sustainability, trustless system and solutions to world problems. I have experience working as part of a team and individually and I delivered all projects in a timely fashion.</p>
+                <p> Currently the Vice Chair at MFC-VIT, with work experience at The Sparks Foundation and Tutedude. Building new projects which provide sustainability, trustless system and solutions to world problems. I have experience working as part of a team and individually and I delivered all projects in a timely fashion.</p>
                 <p>I am fascinated with new technology and always strive hard to learn them and keep myself updated. I am able to handle multiple tasks on a daily basis as well as I use a creative approach to solve problems.</p>
                 <div class="h-50"></div> <img src="img/name.svg" width="230" alt="" />
                 <div class="h-50"></div>
