updated meta tags and corrected meta description.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="An avid developer exploring the realms of the programming world. Visit to leatn more about me.">
-    <meta name="keywords" content="Saksham, Madan, Programmer, Mozilla, Firefox, Club, Vellore, VIT, SakshamMadan, India, DPS, Newtown, Engineer">
+    <meta name="description" content="An avid developer exploring the realms of the programming world. Portfolio of Saksham Madan. Visit to learn more about me.">
+    <meta name="keywords" content="Saksham, Madan, Programmer, Mozilla, Firefox, Club, Vellore, VIT, SakshamMadan, India, DPS, Newtown, Engineer, Student">
     <meta name="author" content="Saksham Madan">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
