added skillset section

--- a/index.html
+++ b/index.html
@@ -292,6 +292,92 @@
         </div>
     </div>
 
+    <!--==========================
+        Features Section
+    ============================-->
+
+    <section id="features" class="padd-section text-center" data-aos="fade-up">
+
+        <div class="container">
+        <div class="section-title text-center">
+            <h2>Skillset Mastered</h2>
+            <br />
+            <br />
+            <!-- <p class="separator">Core Skill-Set mastered</p> -->
+        </div>
+        </div>
+
+        <div class="container">
+        <div class="row1">
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/Pandas_logo.svg" alt="img" class="img-fluid">
+                <h4>Pandas</h4>
+                <p>Used pandas to clean, manage and analyse datasets and dataframes.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/Tensorflow_logo.svg" alt="img" class="img-fluid">
+                <h4>TensorFlow</h4>
+                <p>Numerical computation and large-scale machine learning, including deep learning.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/Scikit_learn_logo_small.svg" alt="img" class="img-fluid">
+                <h4>SKlearn</h4>
+                <p>Implementation of models to execute ML algorithms.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/Keras_logo.svg" alt="img" class="img-fluid">
+                <h4>Keras</h4>
+                <p>Creation of Machine Learning models and Implementation of them.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/OpenCV_Logo_with_text_svg_version.svg" alt="img" class="img-fluid">
+                <h4>openCV</h4>
+                <p>Pre-processing and analysis of images and videos.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/protection.svg" alt="img" class="img-fluid">
+                <h4>Cryptography</h4>
+                <p>Industry knowledge in Encryption algorithms and password hashing.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/blockchain.svg" alt="img" class="img-fluid">
+                <h4>Blockchain</h4>
+                <p>Understanding of it's working and protocols with blockchain programming.</p>
+            </div>
+            </div>
+
+            <div class="col-md-6 col-lg-3">
+            <div class="feature-block">
+                <img src="img/svg/code.svg" alt="img" class="img-fluid">
+                <h4>Algorithm</h4>
+                <p>Total understanding of problem solving and application of theoritical knowledge.</p>
+            </div>
+            </div>
+
+        </div>
+        </div>
+    </section>
+
     <!-- stats -->
     <div id="stats" class="count-up">
         <div class="row">
