--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="col-lg-6">
                                 <div class="welcome_text">
                                     <h3>An avid Developer</h3>
-                                    <p>I am a talented, ambitious and hardworking individual, with broad skills and experience in AI, Cryptography and Blockchain development. With proper industry knowledge in the application of theoritical concepts of the modern programming.</p>
+                                    <p>I am a talented, ambitious and hardworking individual, with broad skills and experience in AI, Cryptography and Blockchain development. With proper industry knowledge in the application of theoretical concepts of the modern programming.</p>
                                     <div class="row">
                                         <div class="col-md-4">
                                             <div class="wel_item">
